Add numbers of users online in the nav bar

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -87,6 +87,12 @@
     text-decoration: none;
   }
 
+  .connections {
+    float: right;
+    margin: 5px 10px;
+    line-height: 2em;
+    font-size: 1.5em;
+  }
 
 
 
