--- a/styles/home.scss
+++ b/styles/home.scss
@@ -10,7 +10,7 @@
   }
 
   .chatbar {
-    background: tomato;
+    background: #4b74b7;
     border-top: 1px solid black;
     bottom: 0;
     display: flex;
@@ -65,7 +65,7 @@
   }
 
   .navbar {
-    background: tomato;
+    background: #4b74b7;
     border-bottom: 1px solid black;
     height: 60px;
     left: 0;
@@ -76,7 +76,7 @@
   }
 
   .navbar-brand {
-    color: inherit;
+    color: aliceblue;
     display: block;
     float: left;
     font-weight: 700;
@@ -92,6 +92,7 @@
     margin: 5px 10px;
     line-height: 2em;
     font-size: 1.5em;
+    color: moccasin;
   }
 
 
